plugins {
  id 'java-library'
  id 'idea'
  id 'maven-publish'
  id 'net.ltgt.errorprone' version '+'
  id 'org.checkerframework' version '+'
  id 'io.franzbecker.gradle-lombok' version '+'
}

repositories {
  mavenLocal()
  mavenCentral()
}

sourceCompatibility = 17

//javadoc {
//  options.encoding = 'UTF-8'
//  options.addBooleanOption('html5', true)
//}

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
  options.release.set(17) // javac --release 7..18+
  
  // todo step2:
  //options.compilerArgs.addAll(['-Xlint:all', '-parameters', '-g', '-Xmaxwarns', '999'])
  options.deprecation = false
  //options.annotationProcessorPath += configurations.errorprone

  options.errorprone {
    enabled = false
    disableWarningsInGeneratedCode = true
    excludedPaths = ".*/build/gen.*/.*"
    //disable("ParameterName") disable("UnusedVariable") errorproneArgs = ["--illegal-access=warn"]
  }
}

publishing {
  publications { // artifactId = folder name
    maven(MavenPublication) {
      from components.java
    }
  }
}
// https://docs.gradle.org/current/userguide/publishing_maven.html
java {
  withSourcesJar()
//  withJavadocJar()
}

dependencies {
  errorprone "com.google.errorprone:error_prone_core:latest.release"
  implementation 'org.checkerframework:checker-qual:3.+'

  implementation 'javax.servlet:servlet-api:2.5'

  implementation 'org.slf4j:slf4j-api:1.7.+'
  implementation 'com.google.guava:guava:31.1-jre'
  implementation 'org.mvel:mvel2:2.4.14.Final'


  implementation 'commons-lang:commons-lang:2.+'
  implementation 'commons-io:commons-io:2.+'
  implementation 'commons-fileupload:commons-fileupload:1.3.+'
  implementation 'commons-codec:commons-codec:1.+'
  implementation 'commons-collections:commons-collections:3.+'
  implementation 'org.freemarker:freemarker:2.3.+'

  implementation 'org.springframework:spring-core:3.2.18.RELEASE'
  implementation 'org.springframework:spring-context:3.2.18.RELEASE'
  implementation 'org.springframework:spring-context-support:3.2.18.RELEASE'
  implementation 'org.springframework:spring-web:3.2.18.RELEASE'

  implementation project(':click')

  // TEST

  testImplementation 'junit:junit:4.+'
  testImplementation 'org.mockito:mockito-inline:+'
  testImplementation "com.google.truth:truth:+"
  testImplementation "com.google.truth.extensions:truth-java8-extension:+"

  testRuntimeOnly 'org.slf4j:slf4j-simple:1.7.+'

  testImplementation project(':click-mock')
}

idea {
  module {
    downloadJavadoc = true
    downloadSources = true
  }
}

test {
  useJUnit()
  maxHeapSize = "500m"
  enableAssertions = true

  testLogging.showStandardStreams = true // show standard out & err of the test JVM on the console

  System.setProperty("slf4j.detectLoggerNameMismatch", "true")
  System.setProperty("file.encoding", "UTF-8")
}

lombok {
  version = "1.+"
  sha256 = "" // don't verify lombok.jar
}